Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
-    "# Include descriptive titles and labels"
+    "# Include descriptive titles and labels\n"
    ]
   },
   {
