Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "words = macbeth.split()."
+    "words = macbeth.split()\n",
+    "wor"
    ]
   },
   {
