Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
     "words = macbeth.split()\n",
-    "wor"
+    "words = [word.lower]"
    ]
   },
   {
