--- a/index.ipynb
+++ b/index.ipynb
@@ -81,8 +81,7 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "words = macbeth.split()\n",
-    "words = [word.lower]"
+    "words = macbeth.split()\n"
    ]
   },
   {
