--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "words = macbeth.lower().split()"
+    "words = macbeth.lower().split().rsplit('')"
    ]
   },
   {
