Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "words = [word.split(',')[0] for word in macbeth.lower().split()]"
+    "words = [word[word.split(',')[0] for word in macbeth.lower().split()]"
    ]
   },
   {
