Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
     "lowercased_words = macbeth.lower().split()\n",
-    "bad_punctuation"
+    "bad_punctuation = [',']"
    ]
   },
   {
