--- a/index.ipynb
+++ b/index.ipynb
@@ -81,8 +81,7 @@
     "# Update word counts\n",
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
-    "lowercased_words = macbeth.lower().split()\n",
-    "bad_punctuation = [',', '.', ':', ';']"
+    "set"
    ]
   },
   {
