Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,8 @@
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
     "# Create Bar Graph\n",
-    "# Include descriptive titles and labels\n"
+    "# Include descriptive titles and labels\n",
+    "\n"
    ]
   },
   {
