Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
     "# Create Bar Graph\n",
     "# Include descriptive titles and labels\n",
     "\n",
-    "macbeth = macbeth.split('David Reed')[1]\n"
+    "macbeth = macbeth.split('David Reed')[1]\n",
+    "macbeth = macbeth"
    ]
   },
   {
