Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
     "# Include descriptive titles and labels\n",
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
-    "macbeth = macbeth"
+    "macbeth = macbeth.lower()\n",
+    "bad_punct"
    ]
   },
   {
