Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
     "macbeth = macbeth.lower()\n",
-    "bad_punct"
+    "bad_punctuation = ['.', '']"
    ]
   },
   {
