--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
     "macbeth = macbeth.lower()\n",
-    "bad_punctuation = ['.', '']"
+    "bad_punctuation = ['.', ',', ':', ';']"
    ]
   },
   {
