Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
     "macbeth = macbeth.lower()\n",
-    "{character for character in macbeth)"
+    "{character for character in macbeth"
    ]
   },
   {
