Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,8 +135,7 @@
     "# Include descriptive titles and labels\n",
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
-    "macbeth = macbeth.lower()\n",
-    "{character for character in macbeth if"
+    "macbeth = macbeth.lower()\n"
    ]
   },
   {
