Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
     "# Include descriptive titles and labels\n",
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
-    "macbeth = macbeth.lower()\n"
+    "macbeth = macbeth.lower()\n",
+    "bad_characters = []"
    ]
   },
   {
