--- a/index.ipynb
+++ b/index.ipynb
@@ -66,61 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'\\n',\n",
-       " '\\r',\n",
-       " ' ',\n",
-       " '!',\n",
-       " '&',\n",
-       " \"'\",\n",
-       " '(',\n",
-       " ')',\n",
-       " ',',\n",
-       " '-',\n",
-       " '.',\n",
-       " '1',\n",
-       " '2',\n",
-       " '3',\n",
-       " ':',\n",
-       " ';',\n",
-       " '?',\n",
-       " '[',\n",
-       " ']',\n",
-       " 'a',\n",
-       " 'b',\n",
-       " 'c',\n",
-       " 'd',\n",
-       " 'e',\n",
-       " 'f',\n",
-       " 'g',\n",
-       " 'h',\n",
-       " 'i',\n",
-       " 'k',\n",
-       " 'l',\n",
-       " 'm',\n",
-       " 'n',\n",
-       " 'o',\n",
-       " 'p',\n",
-       " 'q',\n",
-       " 'r',\n",
-       " 's',\n",
-       " 't',\n",
-       " 'u',\n",
-       " 'v',\n",
-       " 'w',\n",
-       " 'x',\n",
-       " 'y',\n",
-       " 'z'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-ccd910619836>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Include descriptive titles and labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmacbeth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'David Reed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mmacbeth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mcharacters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcharacter\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcharacter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -136,7 +94,7 @@
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
     "macbeth = macbeth.lower()\n",
-    "characters = sorted(set(chara))\n"
+    "characters = sorted(set(character for character in macbeth))\n"
    ]
   },
   {
