Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "macbeth = macbeth.split('David Reed')[1]\n",
     "macbeth = macbeth.lower()\n",
-    "characters = sorted(list(set(character for character in macbeth)))\n"
+    "characters = set(character for character in macbeth)\n"
    ]
   },
   {
