Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,23 +66,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-63d67fa3663e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Include descriptive titles and labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmacbeth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'David Reed'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mmacbeth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mcharacters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcharacter\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcharacter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmacbeth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "\n"
+    "import requests,matplotlib.pyplot as plt\n",
+    "def main():\n",
+    "  words_of_macbeth=requests.get('http://www.gutenberg.org/cache/epub/2264/pg2264.txt').text.split('David Reed')[1].lower().split()\n",
+    "  word_frequencies={}\n",
+    "  for word in words_of_macbeth:\n",
+    "    try:\n",
+    "      word_frequencies[word]+=1\n",
+    "    except KeyError:\n",
+    "      word_frequencies[word]=1\n",
+    "  word_frequencies=[{word:frequency} for word,frequency in word_frequencies.items()]\n",
+    "  word_frequencies.sort(key=lambda item: list(item.values())[0],reverse=True)\n",
+    "  top_word_frequencies=word_frequencies[:25]\n",
+    "  top_words=[list(item.keys())[0] for item in top_word_frequencies]\n",
+    "  top_frequencies=[list(item.values())[0] for item in top_word_frequencies]\n",
+    "  plt.bar(top_words,top_frequencies)\n",
+    "  plt.title('Macbeth word frequencies')\n",
+    "  plt.xlabel('words')\n",
+    "  plt.ylabel('frequencies')\n",
+    "  plt.show()\n",
+    "if __name__=='__main__':\n",
+    "  main()\n"
    ]
   },
   {
